feat: Use backend API for AI proposal enhancement
Migrates AI text enhancement from direct Gemini API calls to a new backend API endpoint. This improves security by abstracting API key management and centralizes AI processing.

Includes updates to package dependencies, development scripts, and font imports in `index.html`. Also adds basic error handling to React mounting and updates image URLs in constants.

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-
 # --- BANCO DE DADOS (Obrigatório) ---
-DATABASE_URL="postgresql://postgres:[SUA_SENHA]@db.[SEU_PROJETO].supabase.co:5432/postgres"
+DATABASE_URL="postgresql://postgres:1824Ab21e5js@db.tjhedpjwbexdxfuddfcc.supabase.co:5432/postgres"
 
 # --- SEGURANÇA (Obrigatório) ---
 JWT_SECRET="linka_jobi_secret_key_123"
 
 # --- GOOGLE GEMINI (IA) ---
-# Adicione VITE_ no inicio para funcionar no React/Vite
-VITE_GOOGLE_API_KEY=""
+# 1. Pegue sua chave em: https://aistudio.google.com/app/apikey
+# 2. Cole ela abaixo dentro das aspas:
+VITE_GOOGLE_API_KEY="AIzaSyA1F8dxyoVSb82_WN-qxH8xqdnuM45cBnc"
 
-# --- SERVIÇOS EXTERNOS (Opcional para Demo) ---
-CLOUDINARY_CLOUD_NAME=""
-CLOUDINARY_API_KEY=""
-CLOUDINARY_API_SECRET=""
+# --- SERVIÇOS EXTERNOS (Upload de Imagens) ---
+CLOUDINARY_CLOUD_NAME="db2lvgunk"
+CLOUDINARY_API_KEY="457488118954421"
+CLOUDINARY_API_SECRET="xtSKVb6xMrGKWB7qLeSacrUjZOE"
