--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
   "name": "linka-jobi",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "server": "node backend/server.js",
+    "setup-db": "node backend/setupDb.js"
   },
   "dependencies": {
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "@google/genai": "^1.41.0",
-    "lucide-react": "^0.574.0",
-    "fastify": "^5.7.4",
-    "pg": "^8.18.0",
-    "bcryptjs": "^3.0.3",
-    "jsonwebtoken": "^9.0.3",
-    "dotenv": "^17.3.1",
-    "@fastify/multipart": "^9.4.0",
-    "url": "^0.11.4",
-    "@fastify/cors": "^11.2.0",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7",
-    "vite": "^7.3.1",
-    "@vitejs/plugin-react": "^5.1.4"
+    "@fastify/cors": "^9.0.1",
+    "@fastify/multipart": "^8.1.0",
+    "@google/genai": "*",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.0.1",
+    "dotenv": "^16.4.1",
+    "fastify": "^4.26.1",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.323.0",
+    "pg": "^8.11.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/node": "^20.11.17",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.0"
   }
 }
