feat(backend): Implement WebSockets for real-time chat
Integrates Socket.IO for real-time message handling between users. This change includes:
- Setting up the Socket.IO server.
- Handling socket connections, disconnections, and authentication using JWT.
- Broadcasting new messages to relevant participants.
- Adding real-time message display and sending functionality in the frontend ChatInterface.

Additionally, this commit includes:
- Updates to the `schema.sql` to include a `transactions` table and ensure correct drop order.
- Minor UI adjustments in `AuthScreens.tsx` for better responsiveness and navigation.
- Updates to `README.md` with a new AI Studio app link.
- Refactoring of server setup in `backend/server.js`, including Cloudinary configuration.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "tsx server.ts",
+    "start": "tsx server.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "server": "node backend/server.js",
@@ -16,18 +17,32 @@
     "@google/genai": "*",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.1",
+    "cors": "^2.8.6",
     "dotenv": "^16.4.1",
+    "express": "^5.2.1",
     "fastify": "^4.26.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.323.0",
+    "multer": "^2.0.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.11.17",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/socket.io": "^3.0.1",
+    "@types/socket.io-client": "^1.4.36",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
